@@ -11,7 +11,7 @@ define( function( require ) {
   // imports
   var inherit = require( 'PHET_CORE/inherit' );
   var GraphIndicator = require( 'PH_SCALE/common/view/graph/GraphIndicator' );
-  var H3OMoleculeNode = require( 'PH_SCALE/common/view/H3OMoleculeNode' );
+  var H3ONode = require( 'PH_SCALE/common/view/molecules/H3ONode' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
@@ -30,7 +30,7 @@ define( function( require ) {
     }, options );
 
     GraphIndicator.call( this, valueProperty,
-      new H3OMoleculeNode(),
+      new H3ONode(),
       new SubSupText( PHScaleConstants.H3O_FORMULA, { font: new PhetFont( 28 ), fill: 'white' } ),
       options );
   }
